# Lima-camera-imxpad

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
conda/camera/: build.sh  conda_build_config.yaml  meta.yaml
conda/tango/: meta.yaml
doc/: index.rst  tango.rst
include/: XpadCamera.h  XpadClient.h  XpadInterface.h  imXpadCamera.h  imXpadClient.h  imXpadConfig.h  imXpadInterface.h
python/: __init__.py
sip/: XpadCamera.sip  XpadInterface.sip  imXpadCamera.sip  imXpadInterface.sip
src/: Makefile  XpadCamera.cpp  XpadClient.cpp  XpadDetInfoCtrlObj.cpp  XpadInterface.cpp  XpadSyncCtrlObj.cpp  imXpadCamera.cpp  imXpadClient.cpp  imXpadConfig.cpp  imXpadDetInfoCtrlObj.cpp  imXpadInterface.cpp  imXpadSyncCtrlObj.cpp
tango/: CMakeLists.txt  imXPAD.py
test/: .gitignore  CMakeLists.txt  ConfigLocalFlat.clf  Makefile  XpadTest.cpp  imXpadTest.cpp  imxpadtest  imxpadtest.sh  test_imXpad_camera.cpp  xpadtest  xpadtest.sh
test/Calibration/: ConfigGlobalFast.cfg  ConfigGlobalMedium.cfg  ConfigGlobalSlow.cfg  ConfigLocalFast.cfl  ConfigLocalMedium.cfl  ConfigLocalSlow.cfl
